# AtomicProgress_by_Evoq

./: .dockerignore  .env.template  .flake8  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  TERMS_OF_SERVICE.md  docker-compose.yaml  docs.py  pyproject.toml  requirements.txt
.github/workflows/: django.yml  flake8.yml
app/: docs.py
app/config/: asgi.py  settings.py  urls.py  wsgi.py
app/habits/: paginators.py  services.py  tasks.py  views.py
app/habits/migrations/: 0001_initial.py  0002_alter_habit_connected_habit.py  0003_alter_habit_options.py  0004_alter_habit_reward.py
app/locations/: models.py  serializers.py  urls.py
app/locations/migrations/: 0001_initial.py
app/users/: models.py  serializers.py  tasks.py
app/users/management/commands/: create_su.py
app/users/templates/users/registration/: verification_email.html
common/: tests.py
common/utils/: __init__.py
config/: settings.py  urls.py
docker/: Dockerfile  migrate.sh  start.sh
docker/nginx/: nginx.conf
habits/: models.py  serializers.py  services.py  tests.py  urls.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
locations/: tests.py  urls.py  views.py
locations/migrations/: 0001_initial.py  0002_initial.py
places/: models.py  tests.py
places/migrations/: 0001_initial.py  0002_place_user.py
users/: managers.py  models.py  serializers.py  service.py  tests.py  urls.py  views.py
users/management/commands/: create_su.py
users/migrations/: 0001_initial.py  0002_alter_user_is_active.py  0003_user_telegram_user_id.py
